# sqli-server/api/controllers/controller.js
@@ -1,0 +1,8 @@
+
+function heartbeat(req,res){
+    res.status(200).send({message: 'Server Running'});
+}
+
+module.exports = {
+    v1_heartbeat : heartbeat
+}
