# sqli-server/api/swagger/swagger.yaml
@@ -1,11 +1,11 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: SQL Injection Attack
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
-basePath: /
+basePath: /api
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -18,25 +18,57 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
+  /v1/heartbeat:
     # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+    x-swagger-router-controller: controller
     get:
-      description: Returns 'Hello' to the caller
+      description: checks health of the server
       # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
+      operationId: v1_heartbeat
       responses:
         "200":
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/DefaultResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        
+  /v1/login:
+    x-swagger-router-controller: login.controller
+    post:
+      operationId: v1_login
+      parameters:
+        - name: data
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/login_model"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/login_model"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            
+  /v1/isLoggedIn: 
+    x-swagger-router-controller: login.controller
+    get:
+      operationId: v1_isLoggedIn
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/DefaultResponse"
         # responses may fall through to errors
         default:
           description: Error
@@ -46,9 +78,7 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
+  DefaultResponse:
     properties:
       message:
         type: string
@@ -58,3 +88,13 @@ definitions:
     properties:
       message:
         type: string
+
+  login_model:
+      required:
+        - email
+        - password
+      properties:
+          email:
+            type: string
+          password:
+              type: string
